hard-gists/824628/run.log
=== Docker Run Log for 824628 ===
Started at: Mi 29. Okt 17:41:31 CET 2025

[2025-10-29 17:41:32] START: Running container for 824628
[2025-10-29 17:41:32] SUCCESS: Container e8c695617f2acf5d34b0e9eef14f03dad31e5d12eccd924c16e3f6f68e573e0d started for 824628
=== Container logs for 824628 ===
  File "/snippet.py", line 22
    print 'oh hai wrld'
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 824628 ===
[2025-10-29 17:41:34] INFO: Container e8c695617f2acf5d34b0e9eef14f03dad31e5d12eccd924c16e3f6f68e573e0d has stopped
